# JogoTecProg

./: .gitignore  CMakeLists.txt  LICENSE  README.md  sfml-test  tricolor.cpp  umaparadai.cpp
FLUZÃO/: teste  teste.cpp
Joao/: teste.cpp
UML/: Diagrama_jogo.mdj  Diagrama_oficial.mdj
include/: Ente.h  Entidade.h  Fase.h  Fases.h  Inimigo.h  Jogador.h  Jogo.h  Lista.h  ListaEntidade.h  Obstaculo.h  Personagem.h  Projetil.h  include.txt  lista.cpp  stdafx.h  teste  testeinlude.txt
include/Estado/: Estado.h  EstadoJogar.h  EstadoMenu.h  MaquinaEstado.h
include/Fases/: Fase.h  Floresta.h  Lava.h
include/Gerenciadores/: Gerenciador_Colisoes.h  Gerenciador_Entradas.h  Gerenciador_Estado.h  Gerenciador_Eventos.h  Gerenciador_Grafico.h
include/List/: Lista.h  ListaEntidade.h
include/Listas/: Lista.h  ListaEntidade.h
include/Menu/: Menu.h  MenuPrincipal.h
include/Menu/Botao/: Botao.h
include/Obstaculos/: Arvore.h  Fogo.h  Obstaculo.h  Pedra.h  Plataforma.h
include/Personagens/: Esqueleto.h  Inimigo.h  Jogador.h  Mago.h  Orc.h  Personagem.h
include/manager/: Gerenciador_Colisoes.h  Gerenciador_Entradas.h  Gerenciador_Eventos.h  Gerenciador_Grafico.h  GraphicsManager.h
src/: CMakeLists.txt  Esqueleto.cpp  Gerenciador_Colisoes.cpp  Gerenciador_Eventos.cpp  Gerenciador_Grafico.cpp  Inimigo.cpp  ListaEntidade.cpp  ente.cpp  entidade.cpp  fase.cpp  jogador.cpp  jogo.cpp  listaEntidade.cpp  mago.cpp  main.cpp  mainteste.cpp  obstaculo.cpp  orc.cpp  personagem.cpp  projetil.cpp  teste1.txt
src/Estado/: estado.cpp  estadoJogar.cpp  estadoMenu.cpp
src/Estados/: estado.cpp  maquinaEstado.cpp
src/Fases/: Fase1-back.json  Fase1.json  Fase2.json  fase.cpp  floresta.cpp  lava.cpp
src/Gerenciadores/: Gerenciador_Colisoes.cpp  Gerenciador_Entradas.cpp  Gerenciador_Estados.cpp  Gerenciador_Eventos.cpp  Gerenciador_Grafico.cpp
src/Menu/: menu.cpp  menuPrincipal.cpp
src/Menu/Botao/: botao.cpp
src/Obstaculos/: Pedra.cpp  arvore.cpp  fogo.cpp  obstaculo.cpp  pedra.cpp  plataforma.cpp
src/Personagens/: Esqueleto.cpp  Inimigo.cpp  jogador.cpp  mago.cpp  orc.cpp  personagem.cpp
src/animation/: teste.txt
src/entities/: teste.txt
src/manager/: Gerenciador_Entradas.cpp  Gerenciador_Eventos.cpp  Gerenciador_Grafico.cpp
src/manager/graphics/: GraphicsManager.cpp
